--- a/bracket-checker.cbp
+++ b/bracket-checker.cbp
@@ -32,7 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Expression.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Expression.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
