--- a/bracket-checker.cbp
+++ b/bracket-checker.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -33,8 +35,10 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="include/Expression.h" />
+		<Unit filename="include/Menu.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Expression.cpp" />
+		<Unit filename="src/Menu.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
