--- a/comparingBST.cbp
+++ b/comparingBST.cbp
@@ -2,28 +2,26 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="bracket-checker" />
+		<Option title="comparingBST" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/bracket-checker" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/comparingBST" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/bracket-checker" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/comparingBST" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -34,11 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="include/Expression.h" />
-		<Unit filename="include/Menu.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/Expression.cpp" />
-		<Unit filename="src/Menu.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
